--- a/weatherwebsite.css
+++ b/weatherwebsite.css
@@ -38,6 +38,12 @@ input[type="text"] {
   border: 1px solid #ccc;
   border-radius: 20px 0 0 20px; 
 }
+input[type="text"],
+button,
+p {
+  font-size: 25px;
+}
+
 
 button {
   background-color: #007BFF;
